# simplexnoise

./: CMakeLists.txt  README.md  _build.cmd  vcpkg.json_
cmake/: Config.cmake.in  ConfigVersion.cmake.in  simplexnoiseConfig.cmake.in
src/: CMakeLists.txt  simplexnoise.cpp  simplexnoise.h
